[package]
name = "vote-coffe-near"
version = "0.1.0"
edition = "2021"
authors = ["Rickhy Siswanto <rickhy.siswanto@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true